WIP - App level localization in stats screen

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -216,5 +216,43 @@
   "authenticationRequiredMessage": "This qBittorrent instance requires authentication. Please provide username and password.",
   "invalidCredentials": "Invalid username or password. Please check your credentials and try again.",
   "cannotConnectToQBittorrent": "Cannot connect to qBittorrent. Please check the address and port, and ensure qBittorrent is running.",
-  "failedToConnectToQBittorrent": "Failed to connect to qBittorrent. Please check your connection details and try again."
+  "failedToConnectToQBittorrent": "Failed to connect to qBittorrent. Please check your connection details and try again.",
+  "notConnectedToQBittorrent": "Not connected to qBittorrent",
+  "failedToLoadStatistics": "Failed to load statistics",
+  "overview": "Overview",
+  "totalTorrents": "Total Torrents",
+  "activeTorrents": "Active Torrents",
+  "completedTorrents": "Completed Torrents",
+  "pausedTorrents": "Paused Torrents",
+  "erroredTorrents": "Errored Torrents",
+  "transferStatistics": "Transfer Statistics",
+  "allTimeUpload": "All-time Upload",
+  "allTimeDownload": "All-time Download",
+  "allTimeShareRatio": "All-time Share Ratio",
+  "sessionWaste": "Session Waste",
+  "notAvailable": "Not available",
+  "totalSize": "Total Size",
+  "totalWasted": "Total Wasted",
+  "torrentStatus": "Torrent Status",
+  "downloading": "Downloading",
+  "seeding": "Seeding",
+  "peersConnected": "Peers Connected",
+  "totalSeeds": "Total Seeds",
+  "totalLeechers": "Total Leechers",
+  "performanceMetrics": "Performance Metrics",
+  "averageDownloadSpeed": "Average Download Speed",
+  "averageUploadSpeed": "Average Upload Speed",
+  "peakDownloadSpeed": "Peak Download Speed",
+  "peakUploadSpeed": "Peak Upload Speed",
+  "writeCacheOverload": "Write Cache Overload",
+  "readCacheOverload": "Read Cache Overload",
+  "queuedIoJobs": "Queued I/O Jobs",
+  "averageTimeInQueue": "Average Time in Queue",
+  "totalQueuedSize": "Total Queued Size",
+  "cacheStatistics": "Cache Statistics",
+  "readCacheHits": "Read Cache Hits",
+  "totalBufferSize": "Total Buffer Size",
+  "timeline": "Timeline",
+  "firstTorrentAdded": "First Torrent Added",
+  "lastTorrentAdded": "Last Torrent Added"
 }
