--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -212,5 +212,43 @@
   "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
   "invalidCredentials": "Nombre de usuario o contraseña inválidos. Por favor verifica tus credenciales e inténtalo de nuevo.",
   "cannotConnectToQBittorrent": "No se puede conectar a qBittorrent. Por favor verifica la dirección y puerto, y asegúrate de que qBittorrent esté ejecutándose.",
-  "failedToConnectToQBittorrent": "Error al conectar a qBittorrent. Por favor verifica los detalles de conexión e inténtalo de nuevo."
+  "failedToConnectToQBittorrent": "Error al conectar a qBittorrent. Por favor verifica los detalles de conexión e inténtalo de nuevo.",
+  "notConnectedToQBittorrent": "No conectado a qBittorrent",
+  "failedToLoadStatistics": "Error al cargar estadísticas",
+  "overview": "Resumen",
+  "totalTorrents": "Total de Torrents",
+  "activeTorrents": "Torrents Activos",
+  "completedTorrents": "Torrents Completados",
+  "pausedTorrents": "Torrents Pausados",
+  "erroredTorrents": "Torrents con Error",
+  "transferStatistics": "Estadísticas de Transferencia",
+  "allTimeUpload": "Subida Total",
+  "allTimeDownload": "Descarga Total",
+  "allTimeShareRatio": "Ratio de Compartir Total",
+  "sessionWaste": "Desperdicio de Sesión",
+  "notAvailable": "No disponible",
+  "totalSize": "Tamaño Total",
+  "totalWasted": "Total Desperdiciado",
+  "torrentStatus": "Estado del Torrent",
+  "downloading": "Descargando",
+  "seeding": "Compartiendo",
+  "peersConnected": "Peers Conectados",
+  "totalSeeds": "Total de Seeds",
+  "totalLeechers": "Total de Leechers",
+  "performanceMetrics": "Métricas de Rendimiento",
+  "averageDownloadSpeed": "Velocidad Promedio de Descarga",
+  "averageUploadSpeed": "Velocidad Promedio de Subida",
+  "peakDownloadSpeed": "Velocidad Máxima de Descarga",
+  "peakUploadSpeed": "Velocidad Máxima de Subida",
+  "writeCacheOverload": "Sobrecarga de Cache de Escritura",
+  "readCacheOverload": "Sobrecarga de Cache de Lectura",
+  "queuedIoJobs": "Trabajos I/O en Cola",
+  "averageTimeInQueue": "Tiempo Promedio en Cola",
+  "totalQueuedSize": "Tamaño Total en Cola",
+  "cacheStatistics": "Estadísticas de Cache",
+  "readCacheHits": "Aciertos de Cache de Lectura",
+  "totalBufferSize": "Tamaño Total del Buffer",
+  "timeline": "Línea de Tiempo",
+  "firstTorrentAdded": "Primer Torrent Agregado",
+  "lastTorrentAdded": "Último Torrent Agregado"
 }
