--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -212,5 +212,43 @@
   "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
   "invalidCredentials": "Nom d'utilisateur ou mot de passe invalide. Veuillez vérifier vos identifiants et réessayer.",
   "cannotConnectToQBittorrent": "Impossible de se connecter à qBittorrent. Veuillez vérifier l'adresse et le port, et vous assurer que qBittorrent fonctionne.",
-  "failedToConnectToQBittorrent": "Échec de la connexion à qBittorrent. Veuillez vérifier vos détails de connexion et réessayer."
+  "failedToConnectToQBittorrent": "Échec de la connexion à qBittorrent. Veuillez vérifier vos détails de connexion et réessayer.",
+  "notConnectedToQBittorrent": "Non connecté à qBittorrent",
+  "failedToLoadStatistics": "Échec du chargement des statistiques",
+  "overview": "Aperçu",
+  "totalTorrents": "Total des Torrents",
+  "activeTorrents": "Torrents Actifs",
+  "completedTorrents": "Torrents Terminés",
+  "pausedTorrents": "Torrents en Pause",
+  "erroredTorrents": "Torrents en Erreur",
+  "transferStatistics": "Statistiques de Transfert",
+  "allTimeUpload": "Téléversement Total",
+  "allTimeDownload": "Téléchargement Total",
+  "allTimeShareRatio": "Ratio de Partage Total",
+  "sessionWaste": "Gaspillage de Session",
+  "notAvailable": "Non disponible",
+  "totalSize": "Taille Totale",
+  "totalWasted": "Total Gaspillé",
+  "torrentStatus": "Statut du Torrent",
+  "downloading": "Téléchargement",
+  "seeding": "Partage",
+  "peersConnected": "Pairs Connectés",
+  "totalSeeds": "Total des Seeds",
+  "totalLeechers": "Total des Leechers",
+  "performanceMetrics": "Métriques de Performance",
+  "averageDownloadSpeed": "Vitesse Moyenne de Téléchargement",
+  "averageUploadSpeed": "Vitesse Moyenne de Téléversement",
+  "peakDownloadSpeed": "Vitesse de Pointe de Téléchargement",
+  "peakUploadSpeed": "Vitesse de Pointe de Téléversement",
+  "writeCacheOverload": "Surcharge du Cache d'Écriture",
+  "readCacheOverload": "Surcharge du Cache de Lecture",
+  "queuedIoJobs": "Travaux I/O en File",
+  "averageTimeInQueue": "Temps Moyen en File",
+  "totalQueuedSize": "Taille Totale en File",
+  "cacheStatistics": "Statistiques du Cache",
+  "readCacheHits": "Succès du Cache de Lecture",
+  "totalBufferSize": "Taille Totale du Buffer",
+  "timeline": "Chronologie",
+  "firstTorrentAdded": "Premier Torrent Ajouté",
+  "lastTorrentAdded": "Dernier Torrent Ajouté"
 }
