--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -212,5 +212,43 @@
   "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
   "invalidCredentials": "Ungültiger Benutzername oder Passwort. Bitte überprüfen Sie Ihre Anmeldedaten und versuchen Sie es erneut.",
   "cannotConnectToQBittorrent": "Kann nicht mit qBittorrent verbinden. Bitte überprüfen Sie die Adresse und den Port und stellen Sie sicher, dass qBittorrent läuft.",
-  "failedToConnectToQBittorrent": "Verbindung zu qBittorrent fehlgeschlagen. Bitte überprüfen Sie Ihre Verbindungsdetails und versuchen Sie es erneut."
+  "failedToConnectToQBittorrent": "Verbindung zu qBittorrent fehlgeschlagen. Bitte überprüfen Sie Ihre Verbindungsdetails und versuchen Sie es erneut.",
+  "notConnectedToQBittorrent": "Nicht mit qBittorrent verbunden",
+  "failedToLoadStatistics": "Statistiken konnten nicht geladen werden",
+  "overview": "Übersicht",
+  "totalTorrents": "Gesamte Torrents",
+  "activeTorrents": "Aktive Torrents",
+  "completedTorrents": "Abgeschlossene Torrents",
+  "pausedTorrents": "Pausierte Torrents",
+  "erroredTorrents": "Fehlerhafte Torrents",
+  "transferStatistics": "Übertragungsstatistiken",
+  "allTimeUpload": "Gesamte Uploads",
+  "allTimeDownload": "Gesamte Downloads",
+  "allTimeShareRatio": "Gesamte Share-Ratio",
+  "sessionWaste": "Session-Verschwendung",
+  "notAvailable": "Nicht verfügbar",
+  "totalSize": "Gesamtgröße",
+  "totalWasted": "Gesamt verschwendet",
+  "torrentStatus": "Torrent-Status",
+  "downloading": "Lädt herunter",
+  "seeding": "Seeded",
+  "peersConnected": "Verbundene Peers",
+  "totalSeeds": "Gesamte Seeds",
+  "totalLeechers": "Gesamte Leechers",
+  "performanceMetrics": "Leistungsmetriken",
+  "averageDownloadSpeed": "Durchschnittliche Download-Geschwindigkeit",
+  "averageUploadSpeed": "Durchschnittliche Upload-Geschwindigkeit",
+  "peakDownloadSpeed": "Höchste Download-Geschwindigkeit",
+  "peakUploadSpeed": "Höchste Upload-Geschwindigkeit",
+  "writeCacheOverload": "Schreib-Cache-Überlastung",
+  "readCacheOverload": "Lese-Cache-Überlastung",
+  "queuedIoJobs": "Warteschlangen-I/O-Jobs",
+  "averageTimeInQueue": "Durchschnittliche Wartezeit",
+  "totalQueuedSize": "Gesamte Warteschlangen-Größe",
+  "cacheStatistics": "Cache-Statistiken",
+  "readCacheHits": "Lese-Cache-Treffer",
+  "totalBufferSize": "Gesamtpuffergröße",
+  "timeline": "Zeitlinie",
+  "firstTorrentAdded": "Erster Torrent hinzugefügt",
+  "lastTorrentAdded": "Letzter Torrent hinzugefügt"
 }
