WIP - App level localization

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -9,6 +9,8 @@
   "addTorrent": "Add Torrent",
   "addTorrentFile": "Add Torrent File",
   "addTorrentUrl": "Add Torrent URL",
+  "addViaUrl": "Add via URL",
+  "addedDate": "Added Date",
   "additionDate": "Addition Date",
   "allTimeDownload": "All-time Download",
   "allTimeShareRatio": "All-time Share Ratio",
@@ -18,6 +20,7 @@
   "analytics": "Analytics",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
+  "applyFilter": "Apply Filter",
   "areYouSureDeleteServer": "Are you sure you want to delete",
   "authenticationRequired": "Authentication required",
   "authenticationRequiredMessage": "This qBittorrent instance requires authentication. Please provide username and password.",
@@ -43,6 +46,7 @@
   "comment": "Comment",
   "completed": "Completed",
   "completedTorrents": "Completed Torrents",
+  "completionDate": "Completion Date",
   "connect": "Connect",
   "connectToQBittorrent": "Connect to qBittorrent",
   "connectedTo": "Connected to",
@@ -98,11 +102,13 @@
   "failedToDeleteTorrent": "Failed to delete torrent",
   "failedToLoadServers": "Failed to load servers. Please try again.",
   "failedToLoadStatistics": "Failed to load statistics",
+  "failedToMoveTorrent": "Failed to move torrent",
   "failedToRename": "Failed to rename",
   "fileSize": "File size",
   "files": "Files",
   "filesChecked": "Files checked",
   "filter": "Filter",
+  "filters": "Filters",
   "firstTorrentAdded": "First Torrent Added",
   "forceStart": "Force Start",
   "french": "French",
@@ -148,6 +154,10 @@
   "maximumOptionsCanBeSelected": "Maximum {max} options can be selected",
   "message": "Message",
   "metadataReceived": "Metadata received",
+  "moveDown": "Move Down",
+  "moveToBottom": "Move to Bottom",
+  "moveToTop": "Move to Top",
+  "moveUp": "Move Up",
   "name": "Name",
   "newLocation": "New Location",
   "no": "No",
@@ -186,6 +196,7 @@
   "port": "Port",
   "portHint": "e.g., 8080",
   "preview": "Preview",
+  "priority": "Priority",
   "privacyPolicy": "Privacy Policy",
   "private": "Private",
   "progress": "Progress",
@@ -214,6 +225,7 @@
   "savePassword": "Save Password",
   "savePath": "Save Path",
   "search": "Search",
+  "searchTorrents": "Search torrents...",
   "seeders": "Seeders",
   "seeding": "Seeding",
   "seedingTime": "Seeding Time",
@@ -254,6 +266,8 @@
   "size": "Size",
   "skipHashCheck": "Skip hash check",
   "sort": "Sort",
+  "sortAndFilter": "Sort & Filter",
+  "sortBy": "Sort By:",
   "spanish": "Spanish",
   "speed": "Speed",
   "stalled": "Stalled",
@@ -285,6 +299,10 @@
   "torrentFile": "Torrent File",
   "torrentLocationChangedSuccessfully": "Torrent location changed successfully",
   "torrentManagementMode": "Torrent Management Mode",
+  "torrentMovedDownInQueue": "Torrent moved down in queue",
+  "torrentMovedToBottomOfQueue": "Torrent moved to bottom of queue",
+  "torrentMovedToTopOfQueue": "Torrent moved to top of queue",
+  "torrentMovedUpInQueue": "Torrent moved up in queue",
   "torrentOnly": "Torrent only",
   "torrentOptions": "Torrent Options",
   "torrentRecheckStarted": "Torrent recheck started",
