--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -9,6 +9,7 @@
   "addTorrent": "Agregar Torrent",
   "addTorrentFile": "Agregar Archivo Torrent",
   "addTorrentUrl": "Agregar URL de Torrent",
+  "addViaUrl": "Agregar via URL",
   "additionDate": "Fecha de Adición",
   "allTimeDownload": "Descarga Total",
   "allTimeShareRatio": "Ratio de Compartir Total",
@@ -18,6 +19,7 @@
   "analytics": "Analíticas",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
+  "applyFilter": "Aplicar Filtro",
   "areYouSureDeleteServer": "¿Estás seguro de que quieres eliminar",
   "authenticationRequired": "Autenticación requerida",
   "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
@@ -43,6 +45,7 @@
   "comment": "Comentario",
   "completed": "Completado",
   "completedTorrents": "Torrents Completados",
+  "completionDate": "Fecha de Finalización",
   "connect": "Conectar",
   "connectToQBittorrent": "Conectar a qBittorrent",
   "connectedTo": "Conectado a",
@@ -98,11 +101,13 @@
   "failedToDeleteTorrent": "Error al eliminar torrent",
   "failedToLoadServers": "Error al cargar servidores. Por favor inténtalo de nuevo.",
   "failedToLoadStatistics": "Error al cargar estadísticas",
+  "failedToMoveTorrent": "Error al mover torrent",
   "failedToRename": "Error al renombrar",
   "fileSize": "Tamaño del archivo",
   "files": "Archivos",
   "filesChecked": "Archivos verificados",
   "filter": "Filtrar",
+  "filters": "Filtros",
   "firstTorrentAdded": "Primer Torrent Agregado",
   "forceStart": "Inicio Forzado",
   "french": "Francés",
@@ -148,6 +153,10 @@
   "maximumOptionsCanBeSelected": "Se pueden seleccionar un máximo de {max} opciones",
   "message": "Mensaje",
   "metadataReceived": "Metadatos recibidos",
+  "moveDown": "Mover Abajo",
+  "moveToBottom": "Mover al Final",
+  "moveToTop": "Mover al Principio",
+  "moveUp": "Mover Arriba",
   "name": "Nombre",
   "newLocation": "Nueva Ubicación",
   "no": "No",
@@ -186,6 +195,7 @@
   "port": "Puerto",
   "portHint": "ej., 8080",
   "preview": "Vista Previa",
+  "priority": "Prioridad",
   "privacyPolicy": "Política de Privacidad",
   "private": "Privado",
   "progress": "Progreso",
@@ -214,6 +224,7 @@
   "savePassword": "Guardar Contraseña",
   "savePath": "Ruta de Guardado",
   "search": "Buscar",
+  "searchTorrents": "Buscar torrents...",
   "seeders": "Seeders",
   "seeding": "Seeding",
   "seedingTime": "Tiempo de Seeding",
@@ -254,6 +265,8 @@
   "size": "Tamaño",
   "skipHashCheck": "Omitir verificación hash",
   "sort": "Ordenar",
+  "sortAndFilter": "Ordenar y Filtrar",
+  "sortBy": "Ordenar por:",
   "spanish": "Español",
   "speed": "Velocidad",
   "stalled": "Estancado",
@@ -285,6 +298,10 @@
   "torrentFile": "Archivo Torrent",
   "torrentLocationChangedSuccessfully": "Ubicación del torrent cambiada exitosamente",
   "torrentManagementMode": "Modo de Gestión de Torrent",
+  "torrentMovedDownInQueue": "Torrent movido hacia abajo en la cola",
+  "torrentMovedToBottomOfQueue": "Torrent movido al final de la cola",
+  "torrentMovedToTopOfQueue": "Torrent movido al principio de la cola",
+  "torrentMovedUpInQueue": "Torrent movido hacia arriba en la cola",
   "torrentOnly": "Solo torrent",
   "torrentOptions": "Opciones de Torrent",
   "torrentRecheckStarted": "Verificación de torrent iniciada",
