--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -9,6 +9,7 @@
   "addTorrent": "Ajouter Torrent",
   "addTorrentFile": "Ajouter Fichier Torrent",
   "addTorrentUrl": "Ajouter URL Torrent",
+  "addViaUrl": "Ajouter via URL",
   "additionDate": "Date d'Ajout",
   "allTimeDownload": "Téléchargement Total",
   "allTimeShareRatio": "Ratio de Partage Total",
@@ -18,6 +19,7 @@
   "analytics": "Analytiques",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
+  "applyFilter": "Appliquer le Filtre",
   "areYouSureDeleteServer": "Êtes-vous sûr de vouloir supprimer",
   "authenticationRequired": "Authentification requise",
   "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
@@ -43,6 +45,7 @@
   "comment": "Commentaire",
   "completed": "Terminé",
   "completedTorrents": "Torrents Terminés",
+  "completionDate": "Date de Finalisation",
   "connect": "Se connecter",
   "connectToQBittorrent": "Se connecter à qBittorrent",
   "connectedTo": "Connecté à",
@@ -98,11 +101,13 @@
   "failedToDeleteTorrent": "Échec de la suppression du torrent",
   "failedToLoadServers": "Échec du chargement des serveurs. Veuillez réessayer.",
   "failedToLoadStatistics": "Échec du chargement des statistiques",
+  "failedToMoveTorrent": "Échec du déplacement du torrent",
   "failedToRename": "Échec du renommage",
   "fileSize": "Taille du fichier",
   "files": "Fichiers",
   "filesChecked": "Fichiers vérifiés",
   "filter": "Filtrer",
+  "filters": "Filtres",
   "firstTorrentAdded": "Premier Torrent Ajouté",
   "forceStart": "Démarrage Forcé",
   "french": "Français",
@@ -148,6 +153,10 @@
   "maximumOptionsCanBeSelected": "Un maximum de {max} options peuvent être sélectionnées",
   "message": "Message",
   "metadataReceived": "Métadonnées reçues",
+  "moveDown": "Descendre",
+  "moveToBottom": "Aller à la Fin",
+  "moveToTop": "Aller au Début",
+  "moveUp": "Monter",
   "name": "Nom",
   "newLocation": "Nouvel Emplacement",
   "no": "Non",
@@ -186,9 +195,9 @@
   "port": "Port",
   "portHint": "ex., 8080",
   "preview": "Aperçu",
+  "priority": "Priorité",
   "privacyPolicy": "Politique de Confidentialité",
   "private": "Privé",
-  "progress": "Progression",
   "progress": "Progrès",
   "protocolDetectedAutomatically": "Le protocole (http:// ou https://) sera détecté automatiquement",
   "qbittorrentVersion": "qBittorrent",
@@ -215,6 +224,7 @@
   "savePassword": "Enregistrer le mot de passe",
   "savePath": "Chemin de Sauvegarde",
   "search": "Rechercher",
+  "searchTorrents": "Rechercher des torrents...",
   "seeders": "Seeders",
   "seeding": "Partage",
   "seedingTime": "Temps de Seeding",
@@ -255,6 +265,8 @@
   "size": "Taille",
   "skipHashCheck": "Ignorer la vérification de hachage",
   "sort": "Trier",
+  "sortAndFilter": "Trier et Filtrer",
+  "sortBy": "Trier par:",
   "spanish": "Espagnol",
   "speed": "Vitesse",
   "stalled": "Bloqué",
@@ -286,6 +298,10 @@
   "torrentFile": "Fichier Torrent",
   "torrentLocationChangedSuccessfully": "Emplacement du torrent changé avec succès",
   "torrentManagementMode": "Mode de Gestion des Torrents",
+  "torrentMovedDownInQueue": "Torrent déplacé vers le bas dans la file",
+  "torrentMovedToBottomOfQueue": "Torrent déplacé à la fin de la file",
+  "torrentMovedToTopOfQueue": "Torrent déplacé au début de la file",
+  "torrentMovedUpInQueue": "Torrent déplacé vers le haut dans la file",
   "torrentOnly": "Torrent seulement",
   "torrentOptions": "Options Torrent",
   "torrentRecheckStarted": "Vérification du torrent démarrée",
