--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -9,6 +9,7 @@
   "addTorrent": "Torrent hinzufügen",
   "addTorrentFile": "Torrent-Datei hinzufügen",
   "addTorrentUrl": "Torrent-URL hinzufügen",
+  "addViaUrl": "Via URL hinzufügen",
   "additionDate": "Hinzufügungsdatum",
   "allTimeDownload": "Gesamte Downloads",
   "allTimeShareRatio": "Gesamte Share-Ratio",
@@ -18,6 +19,7 @@
   "analytics": "Analytik",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
+  "applyFilter": "Filter anwenden",
   "areYouSureDeleteServer": "Sind Sie sicher, dass Sie löschen möchten",
   "authenticationRequired": "Authentifizierung erforderlich",
   "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
@@ -43,6 +45,7 @@
   "comment": "Kommentar",
   "completed": "Abgeschlossen",
   "completedTorrents": "Abgeschlossene Torrents",
+  "completionDate": "Abschlussdatum",
   "connect": "Verbinden",
   "connectToQBittorrent": "Mit qBittorrent verbinden",
   "connectedTo": "Verbunden mit",
@@ -98,11 +101,13 @@
   "failedToDeleteTorrent": "Torrent-Löschung fehlgeschlagen",
   "failedToLoadServers": "Laden der Server fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "failedToLoadStatistics": "Statistiken konnten nicht geladen werden",
+  "failedToMoveTorrent": "Torrent konnte nicht verschoben werden",
   "failedToRename": "Umbenennung fehlgeschlagen",
   "fileSize": "Dateigröße",
   "files": "Dateien",
   "filesChecked": "Dateien überprüft",
   "filter": "Filtern",
+  "filters": "Filter",
   "firstTorrentAdded": "Erster Torrent hinzugefügt",
   "forceStart": "Erzwungener Start",
   "french": "Französisch",
@@ -148,6 +153,10 @@
   "maximumOptionsCanBeSelected": "Maximal {max} Optionen können ausgewählt werden",
   "message": "Nachricht",
   "metadataReceived": "Metadaten erhalten",
+  "moveDown": "Nach unten",
+  "moveToBottom": "An das Ende",
+  "moveToTop": "An den Anfang",
+  "moveUp": "Nach oben",
   "name": "Name",
   "newLocation": "Neuer Ort",
   "no": "Nein",
@@ -186,6 +195,7 @@
   "port": "Port",
   "portHint": "z.B., 8080",
   "preview": "Vorschau",
+  "priority": "Priorität",
   "privacyPolicy": "Datenschutzrichtlinie",
   "private": "Privat",
   "progress": "Fortschritt",
@@ -214,6 +224,7 @@
   "savePassword": "Passwort speichern",
   "savePath": "Speicherpfad",
   "search": "Suchen",
+  "searchTorrents": "Torrents suchen...",
   "seeders": "Seeders",
   "seeding": "Seeded",
   "seedingTime": "Seeding-Zeit",
@@ -254,6 +265,8 @@
   "size": "Größe",
   "skipHashCheck": "Hash-Überprüfung überspringen",
   "sort": "Sortieren",
+  "sortAndFilter": "Sortieren & Filtern",
+  "sortBy": "Sortieren nach:",
   "spanish": "Spanisch",
   "speed": "Geschwindigkeit",
   "stalled": "Hängt",
@@ -285,6 +298,10 @@
   "torrentFile": "Torrent-Datei",
   "torrentLocationChangedSuccessfully": "Torrent-Speicherort erfolgreich geändert",
   "torrentManagementMode": "Torrent-Verwaltungsmodus",
+  "torrentMovedDownInQueue": "Torrent in der Warteschlange nach unten verschoben",
+  "torrentMovedToBottomOfQueue": "Torrent an das Ende der Warteschlange verschoben",
+  "torrentMovedToTopOfQueue": "Torrent an den Anfang der Warteschlange verschoben",
+  "torrentMovedUpInQueue": "Torrent in der Warteschlange nach oben verschoben",
   "torrentOnly": "Nur Torrent",
   "torrentOptions": "Torrent-Optionen",
   "torrentRecheckStarted": "Torrent-Überprüfung gestartet",
